# Proteios-Mini

./: .gitignore  Makefile  README.md  app.py  model.py  pyproject.toml  requirements.txt
src/: Hello.py  app.py  drug_discovery_logic.py  logic.py
src/logic/: anomaly_detection.py  drug_discovery_logic.py  protein_analysis_logic.py
src/models/AnomalyDetection/: autoencoder.keras  encoder.keras  model.py  model_metadata.pkl  utils.py
src/models/DrugDiscoveryVAE/: VAE.py  model.py  molecule_data.csv  utils.py
src/pages/: 1_🧬_Protein_Analysis.py  2_💊_Drug_Discovery.py  3_🧫_Anomaly_Detection.py
src/v-big-query/: big-query-app.py  big-query-logic.py
