[project]
name = "proteios-mini"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bio>=1.7.1",
    "db-dtypes>=1.4.2",
    "google-cloud-bigquery>=3.29.0",
    "google-genai>=1.2.0",
    "graphein>=1.7.7",
    "matplotlib>=3.10.1",
    "py3dmol>=2.4.2",
    "python-dotenv>=1.0.1",
    "streamlit>=1.42.0",
]
